<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, EnjoyThereActivity!</string>
    <string name="app_name">Enjoy There</string>
    <string name="search">Szukaj</string>
    <string name="my_visited_places">Moje miejsca</string>
    <string name="scan">Nowe miejsce</string>
    <string name="placeName">nazwa</string>
    <string name="placeDesc">opis</string>
    <string name="placeSend">Wyślij!</string>
    <string name="placeOccup">Oblężenie miejsca</string>

    <string-array name="occupancy_array">
        <item>Zatłoczone</item>
        <item>Sporo</item>
        <item>Idealnie</item>
        <item>Pusto</item>
        
    </string-array>
    
</resources>